# mybrew

./: .env  .gitignore  manage.py  pyproject.toml  requirements.txt
assets/: base_header.css  home.css  login.css  rating_icons.js  signup.css  state_results.css
my_brew/: asgi.py  settings.py  urls.py  wsgi.py
my_brew_app/: admin.py  api_helpers.py  apps.py  forms.py  helpers.py  models.py  state_choice.py  views.py
my_brew_app/migrations/: 0001_initial.py  0002_alter_mybrewuser_favorite_beer.py  0002_alter_mybrewuser_id.py  0003_alter_mybrewuser_profile_pic.py  0004_remove_mybrewuser_profile_pic.py  0005_mybrewuser_profile_pic.py  0006_auto_20210423_1447.py  0013_breweries_city.py  (+26 more)
my_brew_brewery/: admin.py  apps.py  brewery_forms.py  models.py  views.py
my_brew_notifications/: admin.py  apps.py  models.py  views.py
my_brew_posts/: admin.py  apps.py  forms.py  models.py  post_helpers.py  views.py
static/: 404.css  base_header.css  brewery_profile.css  delete_user.css  home.css  likes_hover.js  login.css  non_user_home.css  notify_hover.js  password_reset.css  rating_icons.js  register_brewery.css  reset_request.css  signup.css  signup_modal.css  state_results.css  update_user.css  user_home.css  user_profile.css  wundertest.js
templates/: 404.html  500.html  base_header.html  brewery_profile.html  delete_user.html  email.html  following_posts.html  home.html  login.html  notification_modal.html  password_reset.html  register_brewery.html  reset_request.html  signup.html  signup_modal.html  state_results.html  temp.html  update_user.html  user_profile.html
(+22 files in other folders)
