[tool.poetry]
name = "my_brew"
version = "0.1.0"
description = "Brewery Locator"
authors = ["Jordan Kubista <jkube29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
flake8 = "^3.9.1"
requests = "^2.25.1"
python-decouple = "^3.4"
gunicorn = "^20.1.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
